<resources>
    <string name="app_name">Sastraprakasika</string>
    <string name="navigation_drawer_open">Sastraprakasika</string>
    <string name="navigation_drawer_close">Sastraprakasika</string>
    <!--// old fb application id//-->
    <!--<string name="facebook_app_id">212774156044896</string>-->
    <!--<string name="fb_login_protocol_scheme">fb212774156044896</string>-->
    <!--new fb application id-->
    <string name="facebook_app_id">584464068715672</string>
    <string name="fb_login_protocol_scheme">fb584464068715672</string>
    <string name="forgotPasswdInstru">Enter your registered email address above. We will send you an OTP for resetting your password.</string>
    <string name="image_content">image</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="title_activity_volume">VolumeActivity</string>
    <string name="email_text">Email will be verified via OTP</string>
    <string name="otp_text">Note: Please check the spam folder in case \n you have not received any mail.</string>
    <string name="discourse_title"><b>The Spiritual Journey of H H Swami Paramarthananda Saraswathi</b></string>
    <string name="discourse_content">Swami Paramārthānanda was born on 18-05-1953 to Subramania Iyer and Parvathy in Palakkad, Kerala. He grew up with three older siblings and had his early schooling and college education in Palakkad, his home town. \n \n

In the year 1976 Swamiji joined a three year course in Vedānta offered by his Guru Swami Dayananda Saraswati at Sandeepany Sadhanālaya, Mumbai.  There, he studied Sanskrit and the Sastras like the Bhagavadgītā, principal Upaniṣads, Brahmasūtras and several Prakaraṇagranthas.  After the completion of his course he moved to Chennai as a Brahmachāri on the directive of his Guru and started teaching Vedānta. He received Sannyāsa from his Guru in the year 1984 and continues to live in Chennai and teach at various centres in the city. \n \n

Over the last four decades Swamiji has systematically given public classes in English on several texts in Vedānta; ie Bhagavadgītā, principal Upaniṣads, Brahmasūtras and  Prakaraṇagranthas like Pañcadaśī, Naiṣkarmyasiddhi, Upadeśasāhasrī and several more.  Swamiji’s methodology of teaching involves communicating in English the essence of every Sanskrit verse in a text.  He has also conducted classes in Sanskrit. Over these several years his public classes have been recorded and documented with care. These recordings are very useful for those who cannot physically attend his lectures.
</string>

    <!--jana code -->
    <string name="topics_title_text">play_icon_nexted</string>
    <string name="terms">Terms and Condition</string>
    <string name="donot_disturb_content">Notification will not make sound or\n
Vibrate"</string>
    <string name="primary_content">Notify when new volumes are \nreleased</string>
    <string name="primary_purchase_title">New Purchase</string>

    <string name="primary_purchase">Notify when new purchases are \nmade</string>

    <string name="primary_content2">Notify when  new purchase \nare made </string>
    <string name="primary_content_title1">New release</string>
    <string name="primary_content_title2">New Purchase</string>
    <string name="sound_available_status">Sound in ON state</string>
    <string name="mute_status">Sound in OFF state</string>
    <string name="search_text">Search By lectures,topics...</string>

    <string name="contest_giveaways">Help &amp; Support</string>


    //camera related

    <!--<string name="app_name">Music Player</string>-->
    <string name="back">Back</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="player">Audio Player</string>
    <string name="next">Next</string>
    <string name="open_playlist">Open Playlist</string>
    <string name="idle">Idle</string>
    <string name="empty_text">Select song from below to play</string>
    <string name="player_button">Album Art Screen</string>

    <color name="orangen">#ff3d00</color>
    <color name="whiten">#ffffff</color>
    <color name="opaque">#70000000</color>

    <dimen name="button_width">32dp</dimen>
    <dimen name="small_button_width">28dp</dimen>
    <dimen name="small_image_art_width">85dp</dimen>
    <string name="err_internet_not_conn">Internet Not Connected</string>
    <string name="Introduction_to_Vedanta">Intoduction To Vedanta</string>
    <string name="song_title">Song Title</string>
    <string name="isRTL">false</string>
    <string name="create_new_playlist">Create New Playlist</string>
    <string name="add">ADD</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="close">Close</string>
    <string name="err_no_playlist_found">No Playlist Found</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="song_add_to_playlist">Song add to playlist -</string>
    <string name="playlist_added">Playlist Added</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="share_song">Share Song</string>
    <string name="listening">I am listening</string>
    <string name="err_no_songs_selected">No Song Selected</string>
    <string name="removed_fav">Removed from favourite</string>
    <string name="added_fav">Added to fav</string>
    <string name="err_cannot_use_features">Can\'t use this feature</string>
    <string name="show">more</string>
    <string name="less">less</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myaccount">My Account</string>


</resources>
