<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:fillViewport="true"
    tools:context=".Activity.NotificationSettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp">

        <RelativeLayout
            android:id="@+id/allow_noti_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/allow_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:minHeight="@dimen/_25sdp"
                android:text="Allow Notifications"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_15sdp"
               />

            <Switch
                android:id="@+id/allow_noti_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:theme="@style/SCBSwitch" />
        </RelativeLayout>

        <View
            android:id="@+id/view_allow"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/allow_noti_layout"
            android:background="@color/mild_grey" />

        <RelativeLayout
            android:id="@+id/sound_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_allow"
            android:background="@color/white"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/sound_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:minHeight="@dimen/_25sdp"
                android:text="Sound"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_15sdp"
                 />

            <Switch
                android:id="@+id/sound_noti_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:theme="@style/SCBSwitch" />
        </RelativeLayout>

        <View
            android:id="@+id/view_sound"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/sound_layout"
            android:background="@color/mild_grey" />

        <RelativeLayout
            android:id="@+id/vibe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_sound"
            android:background="@color/white"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/vibe_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:minHeight="@dimen/_25sdp"
                android:text="Vibration"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_15sdp" />

            <Switch
                android:id="@+id/vibe_noti_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:theme="@style/SCBSwitch" />
        </RelativeLayout>

        <View
            android:id="@+id/view_vibe"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/vibe_layout"
            android:background="@color/mild_grey" />

        <RelativeLayout
            android:id="@+id/donot_disturb_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_vibe"
            android:background="@color/white"
            android:padding="@dimen/_15sdp">

            <TextView

                android:layout_marginTop="10dp"
                android:id="@+id/donot_disb_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_25sdp"
                android:text="Do not Disturb"
                android:textColor="@color/orange"
                android:textSize="@dimen/_18sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Donot_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/donot_disturb_title_layout"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/donot_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_15sdp"
                android:text="Do not disturb"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_15sdp"
                 />

            <TextView
                android:id="@+id/donot_distub_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/donot_sub_title"
                android:layout_marginTop="@dimen/_5sdp"
                android:minHeight="@dimen/_25sdp"
                android:text="@string/donot_disturb_content"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/_15sdp" />

            <Switch
                android:id="@+id/donot_noti_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:theme="@style/SCBSwitch" />
        </RelativeLayout>

        <View
            android:id="@+id/view_donot_disb"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/Donot_layout"
            android:background="@color/mild_grey" />

        <RelativeLayout

            android:id="@+id/primary_noti_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_donot_disb"
            android:background="@color/white"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/primary_noti_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_25sdp"
                android:text="Primary Notifications"
                android:textColor="@color/orange"
                android:textSize="@dimen/_18sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/primary_noti_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/primary_noti_layout"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/primary_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_15sdp"
                android:text="@string/primary_content_title1"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_15sdp"
                 />

            <TextView
                android:id="@+id/primary_content_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/primary_content_title"
                android:layout_marginTop="@dimen/_5sdp"
                android:minHeight="@dimen/_25sdp"
                android:text="@string/primary_content"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/_15sdp" />

            <Switch
                android:id="@+id/primary_content_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:theme="@style/SCBSwitch" />
        </RelativeLayout>

        <View
            android:id="@+id/view_purchase"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/vibe_layout"
            android:background="@color/mild_grey" />
    <RelativeLayout
        android:id="@+id/primary_purchasecontent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/primary_noti_content_layout"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/primary_pructitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_15sdp"
            android:text="@string/primary_purchase_title"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_15sdp"
            />

        <TextView
            android:id="@+id/primary_purch_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/primary_pructitle"
            android:layout_marginTop="@dimen/_5sdp"
            android:minHeight="@dimen/_25sdp"
            android:text="@string/primary_purchase"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_15sdp" />

        <Switch
            android:id="@+id/primary_purchase_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:theme="@style/SCBSwitch" />
    </RelativeLayout>






    </RelativeLayout>


</ScrollView>